--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vant": "^3.4.3",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.33",
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-imp": "^2.1.8",
     "vue-tsc": "^0.34.7"
   }
 }
