--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-vue3-yanxuan",
+  "name": "vue-yanxuan-mobile",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^17.0.33",
     "@vitejs/plugin-vue": "^2.3.3",
+    "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vite-plugin-imp": "^2.1.8",
