--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "vant": "^3.4.3",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^17.0.33",
     "@vitejs/plugin-vue": "^2.3.3",
+    "less": "^4.1.2",
     "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
